--- a/radiantnexus/menu.html
+++ b/radiantnexus/menu.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-<title>TobinnSite</title>
+<title>RadiantNexus</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="/favicon.ico">
 <link rel="stylesheet" type="text/css" href="main.css" media="all">
 </head>
 <IMG style="display: block; margin-left: auto; margin-right: auto;"  SRC="rnlogo.png" BORDER=0 width="192" height="192">
-<h1 align="center"><b><i>RadiantNeus Menu</i></b></h1>
+<h1 align="center"><b><i>RadiantNexus Menu</i></b></h1>
 <a href="home.html" target="rnindex"><img style="display: block; margin-left: auto; margin-right: auto;" src="home.png" alt="Home"></a>
 <p></p>
 <a href="about.html" target="rnindex"><img style="display: block; margin-left: auto; margin-right: auto;" src="about.png" alt="About"></a>
