--- a/radiantnexus/index.html
+++ b/radiantnexus/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<TITLE>TobinnSite</TITLE>
+<TITLE>RadiantNexus</TITLE>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="main.css" media="all">
