--- a/radiantnexus/title.html
+++ b/radiantnexus/title.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>TobinnSite</title>
+<title>RadiantNexus</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="main.css" media="all">
