RadNex concept site almost done

--- a/radiantnexus/about.html
+++ b/radiantnexus/about.html
@@ -11,7 +11,7 @@
 <p style="float: left;"><img src="kgl.png" height="120px" width="120px" border="0px" alt="KGL"></p>
 <p>Name: KGL
 <br>Nickname(s): KGL
-<br>Role: ?
+<br>Role: Concept Director, QA Testing
 <br>Fact: Knuckles</br></br></br></p>
 <br></br>
 <p style="float: left;"><img src="inferno.png" height="120px" width="120px" border="0px" alt="The Real Inferno"></p>
@@ -29,7 +29,7 @@
 <p style="float: left;"><img src="dio.png" height="120px" width="120px" border="0px" alt="Dio-ZX"></p>
 <p>Name: Dio-ZX
 <br>Nickname(s): Dio
-<br>Role: ?
+<br>Role: Concepts, Graphics
 <br>Fact: Dude</br></br></br></p>
 <br></br>
 <p style="float: left;"><img src="maniacshard.png" height="120px" width="120px" border="0px" alt="ManiacShard"></p>
@@ -41,7 +41,7 @@
 <p style="float: left;"><img src="somario.png" height="120px" width="120px" border="0px" alt="Somario"></p>
 <p>Name: Somario
 <br>Nickname(s): Somario
-<br>Role: Funnies
+<br>Role: Funnies, QA Testing
 <br>Fact: Mario</br></br></br></p>
 <br></br>
 <p style="float: left;"><img src="../tobi.png" height="120px" width="120px" border="0px" alt="KrazeeTobi"></p>
