This isn't close to done but it's nearly 1am so

--- a/radiantnexus/about.html
+++ b/radiantnexus/about.html
@@ -5,7 +5,7 @@
 <link rel="icon" href="favicon.ico">
 <link rel="stylesheet" type="text/css" href="main.css" media="all">
 </head>
-<h1 align="center"><i>About </i></h1>
+<h1 align="center"><i>About</i></h1>
 <p>Witty description goes here. This is a placeholder piece of text.</p>
 <h2 align="center"><i>Members</i></h2>
 <p style="float: left;"><img src="kgl.png" height="120px" width="120px" border="0px" alt="KGL"></p>
@@ -16,7 +16,7 @@
 <br></br>
 <p style="float: left;"><img src="inferno.png" height="120px" width="120px" border="0px" alt="The Real Inferno"></p>
 <p>Name: The Real Inferno
-<br>Nickname(s): Inferno
+<br>Nickname(s): Inferno, InfernoGear
 <br>Role: Founder of RadiantNexus, Head Programmer, Graphics
 <br>Fact: When the S1D!</br></br></br></p>
 <br></br>
@@ -38,7 +38,7 @@
 <br>Role: Graphics
 <br>Fact: Calling Bitch</br></br></br></p>
 <br></br>
-<p style="float: left;"><img src="somario.png" height="120px" width="120px" border="0px" alt="Somario"></p>
+<p style="float: left;"><img src="somario-T.png" height="120px" width="120px" border="0px" alt="Somario"></p>
 <p>Name: Somario
 <br>Nickname(s): Somario
 <br>Role: Funnies, QA Testing
@@ -49,6 +49,18 @@
 <br>Nickname(s): Tobi, Tobinnson
 <br>Role: Archiving, QA Testing
 <br>Fact: Is Not Japanese</br></br></br></p>
+<br></br>
+<p style="float: left;"><img src="travis.png" height="120px" width="120px" border="0px" alt="MCTravisYT"></p>
+<p>Name: MCTravisYT
+<br>Nickname(s): Travis, MCT
+<br>Role: Graphics
+<br>Fact: Pokemon-Happy</br></br></br></p>
+<br></br>
+<p style="float: left;"><img src="rivet.png" height="120px" width="120px" border="0px" alt="RivetDev"></p>
+<p>Name: RivetDev
+<br>Nickname(s): Rivet
+<br>Role: Programming
+<br>Fact: Pokemon-Happy</br></br></br></p>
 <br></br>
 <!-- TEMPLATE
 <p style="float: left;"><img src="pfs/propermax.png" height="120px" width="120px" border="0px" alt="ProperMax"></p>
