--- a/japan/sonic3d/index.html
+++ b/japan/sonic3d/index.html
@@ -56,7 +56,7 @@ Presented By <b>Sonic Team 1999</b>
 </font></td>
 
 </table>
-      <p align="center"><a href="http://www.sonicteam.com/" target="_top"><font size="2"><b>Return</b></font></a></p>
+      <p align="center"><a href="/index.html" target="_top"><font size="2"><b>Return</b></font></a></p>
     </center>
 
 </body>
