--- a/radiantnexus/about.html
+++ b/radiantnexus/about.html
@@ -12,7 +12,7 @@
 <p>Name: KGL
 <br>Nickname(s): KGL
 <br>Role: Concept Director, QA Testing
-<br>Fact: Knuckles</br></br></br></p>
+<br>Fact: Sonic Adventure & Knuckles</br></br></br></p>
 <br></br>
 <p style="float: left;"><img src="inferno.png" height="120px" width="120px" border="0px" alt="The Real Inferno"></p>
 <p>Name: The Real Inferno
@@ -60,7 +60,7 @@
 <p>Name: RivetDev
 <br>Nickname(s): Rivet
 <br>Role: Programming
-<br>Fact: Pokemon-Happy</br></br></br></p>
+<br>Fact: The Menu</br></br></br></p>
 <br></br>
 <!-- TEMPLATE
 <p style="float: left;"><img src="pfs/propermax.png" height="120px" width="120px" border="0px" alt="ProperMax"></p>
