added my description

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 <p>Name: SnakieJakie
 <br>Nickname(s): Jakie
 <br>Likes: Strife, Strife, Strife, Strife, Strife, Strife
-<br>FILL IN</br></br></br></p>
+<br>I made Nirvana look good in Doom 2.</br></br></br></p>
 <br></br>
 <p style="float: left;"><img src="pfs/bullettimetails.png" height="120px" width="120px" border="0px" alt="Tails"></p>
 <p>Name: BulletTimeTails
