--- a/radiantnexus/about.html
+++ b/radiantnexus/about.html
@@ -8,12 +8,6 @@
 <h1 align="center"><i>About</i></h1>
 <p>Witty description goes here. This is a placeholder piece of text.</p>
 <h2 align="center"><i>Members</i></h2>
-<p style="float: left;"><img src="kgl.png" height="120px" width="120px" border="0px" alt="KGL"></p>
-<p>Name: KGL
-<br>Nickname(s): KGL
-<br>Role: Concept Director, QA Testing
-<br>Fact: Sonic Adventure & Knuckles</br></br></br></p>
-<br></br>
 <p style="float: left;"><img src="inferno.png" height="120px" width="120px" border="0px" alt="The Real Inferno"></p>
 <p>Name: The Real Inferno
 <br>Nickname(s): Inferno, InfernoGear
@@ -26,17 +20,29 @@
 <br>Role: Graphics
 <br>Fact: Sonic</br></br></br></p>
 <br></br>
-<p style="float: left;"><img src="dio.png" height="120px" width="120px" border="0px" alt="Dio-ZX"></p>
-<p>Name: Dio-ZX
-<br>Nickname(s): Dio
-<br>Role: Concepts, Graphics
-<br>Fact: Dude</br></br></br></p>
-<br></br>
 <p style="float: left;"><img src="maniacshard.png" height="120px" width="120px" border="0px" alt="ManiacShard"></p>
 <p>Name: ManiacShard
 <br>Nickname(s): Cy, Maniac
 <br>Role: Graphics
 <br>Fact: Calling Bitch</br></br></br></p>
+<br></br>
+<p style="float: left;"><img src="sith.png" height="120px" width="120px" border="0px" alt="MrLordSith"></p>
+<p>Name: MrLordSith
+<br>Nickname(s): Sith, Sit H, LoL SiS
+<br>Role: Programmer
+<br>Fact: I'm Your GuG BeeB</br></br></br></p>
+<br></br>
+<p style="float: left;"><img src="rivet.png" height="120px" width="120px" border="0px" alt="RivetDev"></p>
+<p>Name: RivetDev
+<br>Nickname(s): Rivet
+<br>Role: Programming
+<br>Fact: The Menu</br></br></br></p>
+<br></br>
+<p style="float: left;"><img src="travis.png" height="120px" width="120px" border="0px" alt="MCTravisYT"></p>
+<p>Name: MCTravisYT
+<br>Nickname(s): Travis, MCT
+<br>Role: Graphics
+<br>Fact: Pokemon-Happy</br></br></br></p>
 <br></br>
 <p style="float: left;"><img src="somario-T.png" height="120px" width="120px" border="0px" alt="Somario"></p>
 <p>Name: Somario
@@ -50,18 +56,17 @@
 <br>Role: Archiving, QA Testing
 <br>Fact: Is Not Japanese</br></br></br></p>
 <br></br>
-<p style="float: left;"><img src="travis.png" height="120px" width="120px" border="0px" alt="MCTravisYT"></p>
-<p>Name: MCTravisYT
-<br>Nickname(s): Travis, MCT
-<br>Role: Graphics
-<br>Fact: Pokemon-Happy</br></br></br></p>
+<p style="float: left;"><img src="dio.png" height="120px" width="120px" border="0px" alt="Dio-ZX"></p>
+<p>Name: Dio-ZX
+<br>Nickname(s): Dio
+<br>Role: Concepts, Graphics
+<br>Fact: Dude</br></br></br></p>
 <br></br>
-<p style="float: left;"><img src="rivet.png" height="120px" width="120px" border="0px" alt="RivetDev"></p>
-<p>Name: RivetDev
-<br>Nickname(s): Rivet
-<br>Role: Programming
-<br>Fact: The Menu</br></br></br></p>
-<br></br>
+<p style="float: left;"><img src="kgl.png" height="120px" width="120px" border="0px" alt="KGL"></p>
+<p>Name: KGL
+<br>Nickname(s): KGL
+<br>Role: Concept Director, QA Testing
+<br>Fact: Sonic Adventure & Knuckles</br></br></br></p>
 <!-- TEMPLATE
 <p style="float: left;"><img src="pfs/propermax.png" height="120px" width="120px" border="0px" alt="ProperMax"></p>
 <p>Name: FILL IN
