--- a/radiantnexus/about.html
+++ b/radiantnexus/about.html
@@ -14,8 +14,8 @@
 <br>Role: Founder of RadiantNexus, Head Programmer, Graphics
 <br>Fact: When the S1D!</br></br></br></p>
 <br></br>
-<p style="float: left;"><img src="blade.png" height="120px" width="120px" border="0px" alt="BladeOfChaos"></p>
-<p>Name: BladeOfChaos
+<p style="float: left;"><img src="blade.png" height="120px" width="120px" border="0px" alt="BladeOfChaosX"></p>
+<p>Name: BladeOfChaosX
 <br>Nickname(s): Blade
 <br>Role: Graphics
 <br>Fact: Sonic</br></br></br></p>
