--- a/japan/advance/rule.html
+++ b/japan/advance/rule.html
@@ -26,7 +26,7 @@ body{
     </tr>
     <tr>
       <td>
-        <div align="center"><img src="image/chara_sonic.gif" width="81" height="100">Å@<img src="image/chara_tails.gif" width="81" height="100"> <img src="image/chara_knuckles.gif" width="81" height="100">Å@<img src="image/chara_amy.gif" width="81" height="100"> </div>
+        <div align="center"><img src="image/chara_sonic.gif" width="81" height="100"><img src="image/chara_tails.gif" width="81" height="100"><img src="image/chara_knuckles.gif" width="81" height="100"><img src="image/chara_amy.gif" width="81" height="100"> </div>
       </td>
     </tr>
     <tr>
@@ -126,7 +126,7 @@ body{
       </td>
     </tr>
   </table>
-Å@<br>
+<br>
   <b><font color="#00FF00"><font size="2"><img src="image/d1.gif" height="15"> 
   <a href="index.html" target="_top"><font color="#FF0000">&lt;&lt; To Sonic Advance Home Page 
   &gt;&gt;</font></a></font></font></b> <img src="image/d2.gif"> <br>
