--- a/japan/sonicjam/fromteam.html
+++ b/japan/sonicjam/fromteam.html
@@ -1,21 +1,19 @@
 <html>
 <body background="gif/note.gif">
-<b>ＰＲＯＪＥＣＴ ＳＯＮＩＣ に関しての、ソニックチームからのメッセージ</b><br>
+<b>Message from the Sonic Team about PROJECT SONIC</b><br>
 <hr size=4><br>
 
-<b>プロデューサー<br>中裕司</b><p>
+<b>Producer <br>Yuji Naka</b><p>
 
-「今年のセガは"プロジェクト ソニック"という大きなプロジェクトをスタートさせ
-ました。その第１弾となるのが、ソニック６周年の６月に発売する『ソニック ジャム』です。<br>
-メガドライブで発売された４本を完全再現した他、膨大な数に及ぶソニックの
-資料が収録されており、これ１本でソニックのすべてがわかるソフトになっています。<br>
-今後も続くソニックに期待してください。」<p>
+"This year, Sega has started a big project called Project Sonic. The first of these projects is Sonic Jam, which will be released in June, Sonic's 6th anniversary.<br>
+In adddition to completely recreating the four games that were released on the Mega Drive, it also contains a vast amount of Sonic material, making it the one game that will tell you everything about Sonic.<br>
+Stay tuned for more Sonic in the future."<p>
 <p>
 
-<b>キャラクター・デザイナー<br>大島直人</b><p>
+<b>Character Designer <br>Naoto Oshima</b><p>
 
-「セガサターンで発売される、この『ソニック ジャム』に限らず、より大きな"プロジェクト ソニック"というものがスタートするのは、ソニックの生みの親としても本当に嬉しい限りです。<br>
-ソニックを知っている人にも、また今までソニックを知らなかったという人にも、みなさんソニックが好きになってもらえるような大きなプロジェクトになればいいなぁと思ってます。」<p>
+As the creator of Sonic, I'm very happy that Sonic Jam is finished and will be released on the Sega Saturn.<br>
+As the creator of Sonic, I'm really happy that we're starting a bigger project called Project Sonic.<p>
 <p>
 <hr size=4>
 <center>
