--- a/japan/sonicjam/museum.html
+++ b/japan/sonicjam/museum.html
@@ -1,34 +1,34 @@
 <html>
 <body background="gif/note.gif">
-<div align="center"><b> 「ソニックワールド」<br>
-  スクリーンショット<br>
+<div align="center"><b>Sonic World<br>
+  Screenshots<br>
   </b></div>
 <hr align="center">
 <div align="center"><br>
   <img src="gif/cap/f_galle.jpg" widh=130 height=100></div>
 <hr width=100 align="center">
-<div align="center"><b>ギャラリー館</b><br>
-  「SONIC THE HEDGEHOG」に登場するキャラクターたちの、いろいろなイラストが見られます。</div>
+<div align="center"><b>Gallery Hall</b><br>
+  You can see various illustrations of the characters that appear in Sonic the Hedgehog.</div>
 <p align="center"> 
 <div align="center"><img src="gif/cap/f_movie.jpg" widh=130 height=100></div>
 <hr width=100 align="center">
-<div align="center"><b>ムービー館</b><br>
-  「SONIC THE HEDGEHOG」に関係したいろいろなムービーが見られます。</div>
+<div align="center"><b>Movie Hall</b><br>
+  You can see various movies related to Sonic the Hedgehog.</div>
 <p align="center"> 
 <div align="center"><img src="gif/cap/f_sound.jpg" widh=130 height=100></div>
 <hr width=100 align="center">
-<div align="center"><b>サウンド館</b><br>
-  ゲーム中のBGMとSEが聴けます。</div>
+<div align="center"><b>Sound Hall</b><br>
+  You can listen to the BGM and SE of the game.</div>
 <p align="center"> 
 <div align="center"><img src="gif/cap/f_char.jpg" widh=130 height=100></div>
 <hr width=100 align="center">
-<div align="center"><b>キャラクター館</b><br>
-  「ソニックファミリー」と「エッグマンファミリー」の２つの入口があり、入った入口によってプロフィールを見られるキャラクターがかわります。</div>
+<div align="center"><b>Character Gallery</b><br>
+  There are two entrances, the Sonic Family and the Robotnik Family, and the character whose profile you can see changes depending on the entrance you enter.</div>
 <p align="center"> 
 <div align="center"><img src="gif/cap/f_hist.jpg" widh=130 height=100></div>
 <hr width=100 align="center">
-<div align="center"><b>ヒストリー館</b><br>
-  「SONIC THE HEDGEHOG」の歴史がわかる年表が見られます。</div>
+<div align="center"><b>History Hall</b><br>
+  You can see a timeline of the history of Sonic the Hedgehog.</div>
 <p>
 
 <hr>
