--- a/japan/sonicjam/sworld.html
+++ b/japan/sonicjam/sworld.html
@@ -2,8 +2,8 @@
 <body background="gif/note.gif">
 <center>
 <b>
-「ソニックワールド」<br>
-スクリーンショット<br>
+Sonic World<br>
+Screenshots<br>
 </b>
 <hr><br>
   <img src="gif/cap/field0.jpg" widh=130 height=100>
