--- a/japan/advance/menu.html
+++ b/japan/advance/menu.html
@@ -1,4 +1,4 @@
-<html>
+a<html>
 <head>
 <title>Sonic Advance</title>
 <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS">
@@ -35,12 +35,12 @@ function MM_swapImage() { //v3.0
   <table width="600" border="0" cellspacing="0" cellpadding="0">
     <tr> 
       <td nowrap> 
-        <div align="center"><a href="rule.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image1','','image/btn_aon.gif',1)" target="mainFrame"><img src="image/btn_a.gif" width="150" height="50" border="0" name="Image1"></a>　　<a href="game.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image2','','image/btn_bon.gif',1)" target="mainFrame"><img src="image/btn_b.gif" width="150" height="50" border="0" name="Image2"></a>　　<a href="chara.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image3','','image/btn_con.gif',1)" target="mainFrame"><img src="image/btn_c.gif" width="150" height="50" border="0" name="Image3"></a></div>
+        <div align="center"><a href="rule.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image1','','image/btn_aon.gif',1)" target="mainFrame"><img src="image/btn_a.gif" width="150" height="50" border="0" name="Image1"></a><a href="game.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image2','','image/btn_bon.gif',1)" target="mainFrame"><img src="image/btn_b.gif" width="150" height="50" border="0" name="Image2"></a><a href="chara.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image3','','image/btn_con.gif',1)" target="mainFrame"><img src="image/btn_c.gif" width="150" height="50" border="0" name="Image3"></a></div>
       </td>
     </tr>
     <tr> 
       <td nowrap> 
-        <div align="center"><a href="sec.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image4','','image/btn_don.gif',1)" target="mainFrame"><img src="image/btn_d.gif" width="150" height="40" border="0" name="Image4"></a>　　<a href="chao.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image5','','image/btn_eon.gif',1)" target="mainFrame"><img src="image/btn_e.gif" width="150" height="40" border="0" name="Image5"></a></div>
+        <div align="center"><a href="sec.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image4','','image/btn_don.gif',1)" target="mainFrame"><img src="image/btn_d.gif" width="150" height="40" border="0" name="Image4"></a><a href="chao.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image5','','image/btn_eon.gif',1)" target="mainFrame"><img src="image/btn_e.gif" width="150" height="40" border="0" name="Image5"></a></div>
       </td>
     </tr>
   </table>
