--- a/japan/sonicjam/pj.html
+++ b/japan/sonicjam/pj.html
@@ -7,16 +7,16 @@
 <font size=2>
 <hr size=4 align="center">
 <div align="center"><a href="fromteam.html" target="rightFrame" text="#ff0000"><img border=0 src="gif/from.gif" width=150 height=16></a><br>
-  <a href="fromteam.html" target="rightFrame" text="#ff0000"><b>ソニックチームからの<br>
-  メッセージ</b></a><br>
+  <a href="fromteam.html" target="rightFrame" text="#ff0000"><b>Message from the<br>
+  Sonic Team</b></a><br>
   <hr size=4 align="center">
   <div align="center"><a href="jammov.html" target="rightFrame" text="#ff0000"><img border=0 src="gif/movdl.gif" width=150 height=16></a><br>
-      <a href="jammov.html" target="rightFrame" text="#ff0000"><b>プレビュームービーをGET！</b><br>
+      <a href="jammov.html" target="rightFrame" text="#ff0000"><b>Get the preview movies!</b><br>
     </a> </div>
 </div>
 </font> 
 <hr size=4 align="center">
-<p align="center"> <b> <a href="http://www.sonicteam.com/" target="_top"><img border=0 src="gif/back.gif" width=60 height=32></a></b> 
+<p align="center"> <b> <a href="/index.html" target="_top"><img border=0 src="gif/back.gif" width=60 height=32></a></b> 
 <p align="center"> 
 <hr size=4 align="center">
 <div align="center"><font size=1> (C) SEGA</font> </div>
