--- a/japan/sonicjam/jammov.html
+++ b/japan/sonicjam/jammov.html
@@ -20,7 +20,7 @@ This is the movie that opens SONIC JAM!<p>
 <tr><td><font size=1>
 Video
 </font></td><td><font size=1>
-160Å~110, 15f/sec
+160x110, 15f/sec
 </font></td>
 <tr><td valign="top"><font size=1>
 Compression
@@ -45,7 +45,7 @@ Length and Size
 
 <hr size=4><br>
   <b> <img border=1 src="gif/jamss.gif" width=80 height=60><br>
-SONIC JAM <br>For <br>Flash Sega Saturn
+SONIC JAM <br>for <br>Flash Sega Saturn
 </b><br>
 
 </center><p><center>
@@ -57,7 +57,7 @@ All about SONIC JAM, edited for in-store demo!<p>
 <tr><td><font size=1>
 Video
 </font></td><td><font size=1>
-102Å~75, 12f/sec
+102x75, 12f/sec
 </font></td>
 <tr><td valign="top"><font size=1>
 Compression
