sonicjam is done!

--- a/japan/sonicjam/sonicjam_pjs.html
+++ b/japan/sonicjam/sonicjam_pjs.html
@@ -5,32 +5,22 @@
 <tr>
 <td valign="top" align="left">
 <b>
-夢のプロジェクトがついにセガサターンで実現！<br>
-１９９７年、「ＰＲＯＪＥＣＴ ＳＯＮＩＣ」始動！！
+A dream project finally realized on the Sega Saturn!<br>
+1997. PROJECT SONIC started!
       <p> <img src="gif/cesa.gif" lowsrc="gif/cesa_alt.gif" width=300 height=324> 
       </b></td>
 <td valign="top">
-<font size=4><b>　　”第１弾”</b></font>
+<font size=4><b>Part 1</b></font>
       <p> <img src="gif/ribbon.gif" width=150 height=49 align="center">
       <p>
-<b>　「ソニック ジャム」</b>
+<b>Sonic Jam</b>
 <p>
 <p>
-　セガサターンにヤツらが帰ってき
-た！<br>
-　全世界で大ヒットした超音速アク
-ションゲーム「ソニック・ザ・ヘッ
-ジホッグ」が長い沈黙を破りついに
-セガサターンに登場！<br>
-プロジェクト ソニック第１弾は、
-過去にメガドライブで発売されたシ
-リーズの代表４作品（ソニック・ザ
-・ヘッジホッグ１～３，ソニック＆
-ナックルズ）をカップリング。<br>
-セガサターン版オリジナル要素も加
-わり、ファンならずとも必見の１本
-だ！！
-      <p> <b>好評発売中：￥４,８００（税込 ￥５,０４０）<br>
+They're back on the Sega Saturn!<br>
+Sonic the Hedgehog, a supersonic action game that was a big hit all over the world, is finally coming to the Sega Saturn after a long silence!<br>
+Project Sonic's first project. Four of the most popular Sonic series installments released on the Mega Drive in the past (Sonic the Hedgehog 1-3, Sonic & Knuckles).<br>
+Original elements from the Sega Saturn version have been added. It's a must-have for all fans!
+      <p> <b>Now on sale: 4,800 yen (5,040 yen including tax)<br>
         </b>
 </td>
 </tr>
@@ -38,62 +28,62 @@
 
 <hr>
 
-<b>ATTENTION１：ソニックのすべてがわかる「ソニック ワールド」！！</b>
-<p> 　<font size="2">この「ソニック ジャム」に追加された新要素のひとつが「ソニック ワールド」だ。<br>
-  　<a href="sworld.html" target="_self"><b>フル３Ｄのポリゴンで構成された「ソニック ワールド」</b></a>の中をソニックが走りまわり、キャラクターの歴史やゲーム年表、ソニックをテーマに描かれたさまざまなイラスト、サウンド、メガドライブやジェネシス(海外用メガドライブ)版のマニュアル(中味まですべて収録してるのだ)など、<a href="museum.html" target="_self"><b>ソニックシリーズのありとあらゆる資料</b></a>を回覧することができるぞ。<br>
-  　ソニックに関する知識はこれでカンペキだ！！<br>
+<b>ATTENTION 1: Sonic World is all about Sonic!</b>
+<p><font size="2">One of the new elements added to this Sonic Jam is the Sonic World.<br>
+<a href="sworld.html" target="_self"><b>Sonic World is composed of full 3D polygons.</b></a>You'll be able to see the history of the character, the timelime of the game, various illustrations of Sonic themes, sounds, <a href="museum.html" target="_self"><b>the manuals for the Mega Drive and Genesis </b></a>(Mega Drive for overseas use) (even the inside of the manuals are included), and all the other materials of the Sonic series.<br>
+That's all you need to know about Sonic!<br>
   </font>
 <hr>
-<b>ATTENTION２：親切機能も満載！</b>
-<p> 　<font size="2">収録された４タイトルすべてにおいて、タイムアタックやスペシャルステージのみを遊ぶモードを新たに追加。<br>
-  また「ソニック＆ナックルズ」では、メガドライブ版の特色であった<a href="lock.html" target="_self"><b>「ロックオン・システム」</b></a>機能ももちろん再現されている。まさに至れり尽せりだ！ 
+<b>ATTENTION 2: Full of helpful features too!</b>
+<p><font size="2">For all four titles included in the collection, a new mode has been added to play only time attack and special stages.<br>
+  Sonic & Knuckles also features the Mega Drive version's unique <a href="lock.html" target="_self"><b>Lock-On System </b></a>function, which has been recreated. It's the best of both worlds! 
   </font> 
 <hr>
-<b>ATTENTION３：そしてさらに……？</b>
-<p> 　<font size="2">このソフトのために新たに制作された<a href="jammov.html" target="_self"><b>オリジナルのオープニングＣＧムービー</b></a>もある。<br>
-  サターンでは意外にも初めての登場となるＣＧレンダリングソニックの姿は必見だ。<br>
-  そのほか、「ソニック１」でスピンダッシュが可能になっていたり、ＰＬＡＹしたＡ ＣＴは、オートセーブ機能により、いつでもつづきが遊べるぞ。 </font>
+<b>ATTENTION 3: And even more......?</b>
+<p><font size="2">There is also an <a href="jammov.html" target="_self"><b>original opening CG movie </b></a>that was newly created for this software.<br>
+  The CG rendering of Sonic, which is surprisingly new to the Saturn, is a must-see.<br>
+  In addition, Sonic 1 allows you to spin dash, and the auto-save function allows you to continue playing the game anytime you want. </font>
 <hr>
 <br>
-<b>●参考：ＪＡＭに収録されるソニックシリーズを紹介</b>
-<p> <img src="gif/jp1.gif" align="left" hspace=8> <b>ソニック・ザ・ヘッジホッグ</b> 
-<p> <font size="2">＜音速針鼠さっそうと登場！＞<br>
-  １９９１年、セガが満を持して発表したシリーズ第１弾。 <br>
-  それまでにはないクールなセンスと独特の高速アクションが好評となり、日本だけでなく全世界で大ブレイク。<br>
-  超音速ハリネズミの伝説はここから始まった。</font>
+<b>Reference: Introduction to the Sonic series included in JAM.</b>
+<p> <img src="gif/jp1.gif" align="left" hspace=8> <b>Sonic the Hedgehog</b> 
+<p> <font size="2"><The sonic speed needle rat is here!><br>
+  The first game in the series released by Sega in 1991.<br>
+  His cool sense of style and unique high-speed action, which had never been seen before, were well received, and he became a big hit not only in Japan but all over the world.<br>
+  This is where the legend of the supersonic hedgehog began.</font>
 <p>
 <br clear=all>
-  <img src="gif/jp2.gif" align="left" hspace=8> <b>ソニック・ザ・ヘッジホッグ２</b> 
-<p> <font size="2">＜キュートな相棒はしっぽが２本！＞<br>
-  翌年発売のシリーズ第２弾ではキュートなキツネの「マイルス“テイルス”パウアー」が相棒となり、２人同時プレイも可能に。<br>
-  スピード感や各ゾーンの仕掛けも更にグレードアップし、前作以上の完成度を誇った。画面を２分割して行う対戦プレイも嬉しい。</font>
+  <img src="gif/jp2.gif" align="left" hspace=8> <b>Sonic the Hedgehog 2</b> 
+<p> <font size="2"><My cute little buddy has two tails!><br>
+  The second game in the series, which was released the following year, featured the cute fox Miles "Tails" Prower as a sidekick, allowing two players to play simultaneously.<br>
+  The sense of speed and the tricks in each zone have been further upgraded, making it even more complete than the previous game. You can also play against other players by splitting the screen in two.</font>
 <p>
 <br clear=all>
-  <img src="gif/jp3.gif" align="left" hspace=8> <b>ソニック・ザ・ヘッジホッグ３</b> 
-<p> <font size="2">＜ヤツは敵？ それとも味方？＞<br>
-  前作より２年、なんと２部作となった「３」。その前編とも言えるのがこの作品だ。<br>
-  ことあるごとにソニックに迫る謎のキャラクター「ナックルズ・ザ・エキドゥナ」が登 場。各ゾーンの仕掛けもさらに洗練された。</font>
+  <img src="gif/jp3.gif" align="left" hspace=8> <b>Sonic the Hedgehog 3</b> 
+<p> <font size="2"><Is he an enemy or a friend? Friend or foe?><br>
+  It's been two years since the last game, and this one is a two-part story. This game is the first part.<br>
+  The myserious character Knuckles the Echidna appears on the stage, closing in on Sonic at every turn. The tricks in each zone have been further refined.</font>
 <p>
 <br clear=all>
-  <img src="gif/jpsk.gif" align="left" hspace=8> <b>ソニック＆ナックルズ</b> 
-<p> <font size="2">＜シリーズ最高峰はロックオン・カートリッジ＞<br>
-  「ソニック３」の半年後、謎のベールに包まれ、その存在を明らかにした本作品。<br>
-  カートリッジの上にさらにカートリッジを差し込むという「ロックオン・システム」の採用で、ゲームの幅がますます広がった。<br>
-  今度はナックルズもプレイヤーキャラとして参加する。</font>
+  <img src="gif/jpsk.gif" align="left" hspace=8> <b>Sonic & Knuckles</b> 
+<p> <font size="2"><The pinnacle of the series is the lock-on cartridge.><br>
+  Six months after the release of Sonic 3, a veil of mystery shrouded this title, revealing its existence.<br>
+  The adoption of the lock-on system, in which an additional cartridge is inserted on top of the cartridge, ahs further expanded the range of games available.<br>
+  This time, Knuckles joins as a playable character.</font>
 <p>
 <br clear=all>
 <hr>
 <center>
 <br>
-  <b> <font size="2">そして…　　　　　　　　　　　　　　　　　　　　　　　　　　<br>
-  １９９７年末、セガサターンで、<a href="../sonicr/index.html" target="_top">ソニック最新作</a>がベールを脱ぐ…<br>
-  …　　　　　　　　　　　　　　　　　　　　　　　　　　　　　</font>
+  <b> <font size="2">And...<br>
+  At the end of 1997, <a href="../sonicr/index.html" target="_top">another Sonic game was unveiled </a>on the Sega Saturn...<br>
+</font>
 <p>
 </b>
 </center>
 <hr>
 <div align="center"><br>
-  <a href="http://www.sonicteam.com/" target="_top"><font size="2"><b>Return
+  <a href="/index.html" target="_top"><font size="2"><b>Return
   </b></font></a></div>
 </body>
 </html>
