--- a/japan.html
+++ b/japan.html
@@ -6,5 +6,6 @@
 <link rel="stylesheet" type="text/css" href="main.css" media="all">
 </head>
 <h1 align="center">Translated Japanese Sonic Sites</h1>
-<a href="japan/sonic3d/index.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic3d.png" width="320" height="200" alt="Sonic 3D: Flickies' Island"></a>
+<a href="japan/sonic3d" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic3d.png" width="320" height="200" alt="Sonic 3D: Flickies' Island"></a>
+<a href="japan/sonicjam" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicjam.png" width="320" height="200" alt="Sonic Jam"></a>
 </html>
