--- a/japan/sonicr/r/course.html
+++ b/japan/sonicr/r/course.html
@@ -145,7 +145,7 @@ Reactive Factory</b><br>
 </table>
 
 
-  <p><a href="../index.html" target="_top">–ß‚é</a></p>
+  <p><a href="../index.html" target="_top">Return</a></p>
 </center>
 </body>
 </html>
