--- a/japan/sonicr/r/rchara.html
+++ b/japan/sonicr/r/rchara.html
@@ -380,7 +380,7 @@ SONIC R Character Page
 
 </table>
 
-  <p><a href="../index.html">–ß‚é</a></p>
+  <p><a href="../index.html">Return</a></p>
   <pre>
 </pre>
 
