--- a/japan/sonicr/r/rstory.html
+++ b/japan/sonicr/r/rstory.html
@@ -65,7 +65,7 @@
 </tr>
 </table>
 <hr size="4" width="500"> 
-<a href="../index.html" target="_top">–ß‚é</a>
+<a href="../index.html" target="_top">Return</a>
 </center>
 </body>
 </html>
