--- a/japan/sonicr/r/screen.html
+++ b/japan/sonicr/r/screen.html
@@ -55,7 +55,7 @@ Radical City</b><br>
 </center>
 <hr>
 <center>
-  Å@ <a href="../index.html">ñﬂÇÈ</a> 
+  Å@ <a href="../index.html">Return</a> 
 </center>
 </body>
 </html>
