--- a/sonicstadium/topcities/son3dmdboxes.html
+++ b/sonicstadium/topcities/son3dmdboxes.html
@@ -5,9 +5,10 @@ function WinOpen(src)
 	OpenWin.focus()
 }
 <!--
-	window.open('https://web.archive.org/20011101000000/http://216.179.151.72/stuff_tc/popupbanner.html','28AC373F','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
+	window.open('https://web.archive.org/20011201000000/http://64.152.192.118/stuff_tc/popupbanner.html','28AC373F','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
 // -->
-</SCRIPT><HTML>
+</SCRIPT>
+<HTML>
  <HEAD>
   <!-- $MVD$:app("MicroVision WebExpress","770") -->
   <!-- $MVD$:template("","0","0") -->
