--- a/japan/sonicr/index.html
+++ b/japan/sonicr/index.html
@@ -109,7 +109,7 @@ sonic r
 
 <hr>
   <br>
-  <a href="http://www.sonicteam.com/" target="_top"><font size="2"><b>–ß‚é</b></font></a> 
+  <a href="/index" target="_top"><font size="2"><b>Return</b></font></a> 
 </center>
 </body>
 </html>
