--- a/japan/sonicr/r/rchara.html
+++ b/japan/sonicr/r/rchara.html
@@ -9,13 +9,12 @@ SONIC R Character Page
 <table width="500">
 <tr>
 <td bgcolor="red" align="left"><font color="white">
-<b>　登場キャラクターについて　</b></font>
+<b>About The Characters</b></font>
 </td>
 </tr>
 <tr>
 <td>
-各キャラクターには、それぞれ特殊能力が備わっており、その能力によって行くこと
-ができる分岐ルートが変わります。
+Each character has a special ability, and the branching route they can take depends on that ability.
 </td>
 </tr>
 </table>
@@ -24,16 +23,16 @@ SONIC R Character Page
 <table border="0" width="500">
 <tr>
 <td colspan="2">
-● <b>基本キャラクター</b><p>
+<b>Base Characters</b><p>
 
-最初から登場するキャラクターです。グランプリモードはこの５人で争います。<p>
+These are the characters that appear from the beginning. The Grand Prix mode is contested by these five characters.<p>
 </td>
 </tr>
 
 <tr>
 <td colspan="2" bgcolor="red">
 <font size="2" color="white">
-<b>ソニック・ザ・ヘッジホッグ</b><br>
+<b>Sonic the Hedgehog</b><br>
 </font>
 </td>
 </tr>
@@ -42,20 +41,20 @@ SONIC R Character Page
 </td>
 
 <td valign="top">
-おなじみの主人公。最高速度は全キャラ中トップ。<br>
-しかし、加速性能とグリップ性能が劣るのでテクニックが必要。<br>
-丸まることができ、スピンダッシュによってさらに速いスピードをだすことが可能。<br>
-さらに２段ジャンプもできるので、川など大きな障害物を飛び越すことができる。<br>
+The familiar protagonist. His speed is the highest among all characters.<br>
+However, the acceleration and grip performance are inferior, so technique is required.<br>
+He can curl up and spin-dash to achieve even greater speeds.<br>
+He can also jump two steps, so he can jump over large obstacles such as rivers.<br>
 
 </td>
 </tr>
 <tr>
 <td colspan="2">
 <b>
-攻略のポイント</b><br>
-○ スタート時は必ずスピンダッシュを成功させよう。<br>
-○ 減速は極力さけて、ＬＲボタンを使ったスムーズなコーナーリングを。<br>
-○ ２段ジャンプで、思わぬショートカットを発見できるぞ。<br>
+Strategies</b><br>
+Make sure to do a successful spin dash at the start.<br>
+Avoid deccelaration as much as possible, and use the L and R buttons for smooth cornering.<br>
+You can find unexpected shortcuts by jumping two steps.<br>
 <hr>
 </td>
 </tr>
@@ -64,7 +63,7 @@ SONIC R Character Page
 <tr>
 <td colspan="2" bgcolor="red">
 <font size="2" color="white">
-<b>マイルス "テイルス" パウアー</b><br>
+<b>Miles "Tails" Prower</b><br>
 </font>
 </td>
 </tr>
@@ -75,19 +74,19 @@ SONIC R Character Page
 </td>
 
 <td valign="top">
-ソニックにあこがれており、いつもソニックのそばについている。<br>
-最高速度は劣るがその他の能力は比較的高い。<br>
-ソニック同様丸まることができ、スピンダッシュが可能。<br>
-また、持っている２本のしっぽを回して飛行することもできるので、大胆なショートカットが可能。<br>
+He admires Sonic, and is always by his side.<br>
+The maximum speed is inferior, but other abilities are relatively high.<br>
+Like Sonic, he can curl up and spin dash.<br>
+He can also take flight by spinning the two tails he has, allowing him to take bold shortcuts.<br>
 </td>
 </tr>
 <tr>
 <td colspan="2">
 <b>
-攻略のポイント</b><br>
-○ スタート時は必ずスピンダッシュを成功させよう。<br>
-○ 飛行時間は意外と短い。着地出来る場所では、こまめな着地を心掛けよう。<br>
-○ プロペラ飛行を活かしたテイルスオリジナルのルートを探しだせ。<br>
+Strategies</b><br>
+Make sure to do a successful spin dash at the start.<br>
+Flight time is surprisingly short. Try to land as often as possible when you can.<br>
+Find a route that utilizes Tails' propeller flight.<br>
 <hr>
 </td>
 </tr>
@@ -97,7 +96,7 @@ SONIC R Character Page
 <tr>
 <td colspan="2" bgcolor="red">
 <font size="2" color="white">
-<b>ナックルズ・ザ・エキドゥナ</b><br>
+<b>Knuckles the Echidna</b><br>
 </font>
 </td>
 </tr>
@@ -108,19 +107,19 @@ SONIC R Character Page
 </td>
 
 <td valign="top">
-ソニックのライバル的存在。<br>
-全ての能力においてバランスがとれているキャラクター。<Br>
-ソニック、テイルス同様丸まって、スピンダッシュ可能。<br>
-また、空を滑空することが可能で、高いところから滑空すればテイルスより長く飛んでいられる。<br>
+Sonic's rival.<br>
+A well-balanced character in all abilities.<Br>
+Like Sonic and Tails, he can curl up and spin dash.<br>
+He can also glide through the air, and if he glides from a high place, he can stay aloft longer than Tails.<br>
 </td>
 </tr>
 <tr>
 <td colspan="2">
 <b>
-攻略のポイント</b><br>
-○ スタート時は必ずスピンダッシュを成功させよう。<br>
-○ 高い場所からイッキにショートカット。アップダウンの激しい道では特に有効。<Br>
-○ 旋回性能が高いので、ソニックより安定したコーナーリングが可能。<br>
+Strategies</b><br>
+Make sure to do a successful spin dash at the start.<br>
+Glide from high places. Particularly useful on roads with heavy ups and downs.<Br>
+Higher turning performance enables more stable cornering than Sonic.<br>
 <hr>
 </td>
 </tr>
@@ -129,7 +128,7 @@ SONIC R Character Page
 <tr>
 <td colspan="2" bgcolor="red">
 <font size="2" color="white">
-<b>エミー・ローズ</b><br>
+<b>Amy Rose</b><br>
 </font>
 </td>
 </tr>
@@ -140,17 +139,17 @@ SONIC R Character Page
 </td>
 
 <td valign="top">
-唯一の女性キャラクター。<br>
-テイルスに改造してもらった万能カーに乗ってレースに参加する。<br>
-最高速は低いが加速が良く初心者向けのキャラクター。<br>
-また彼女の乗る万能カーで、水上も走行可能である。<br>
-「ターボダッシュ」を使えば、一定時間猛スピードで走ることができる。<br>
+The only female character.<br>
+She participates in races in an all-purpose car that Tails had modified for her.<br>
+The top speed is low, but the acceleration is good and the character is suitable for beginners.<br>
+Her car is all-purpose, thus, it can travel on water.<br>
+If you use Turbo Dash, you can go at high speed for a certain period of time.<br>
 </td>
 </tr>
 <tr>
 <td colspan="2">
 <b>
-攻略のポイント</b><br>
+Strategies</b><br>
 ○ スタート時にはターボダッシュが必須。<Br>
 ○ 地上を走っていては勝負には勝てない。水面を大胆にショートカットしよう。<Br>
 ○ ターボダッシュの使い方が勝負の決め手。むやみに使ってタイムロスをしないように。<Br>
