--- a/japan/sonicr/r/rstory.html
+++ b/japan/sonicr/r/rstory.html
@@ -13,7 +13,7 @@
 <tr>
 <td bgcolor="red" valign="bottom" width="500" align="right">
 <font color="white"><b>
-ＳＯＮＩＣ－Ｒ　ストーリー　
+Sonic R Story　
 </b></font>
 </td>
 </tr>
