--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 <p style="float: left;"><img src="pfs/bullettimetails.png" height="120px" width="120px" border="0px" alt="Tails"></p>
 <p>Name: BulletTimeTails
 <br>Nickname(s): BTT, Tails, Bullet Time
-<br>Likes: Sonic, Boomer Shooters, Resident Evil, Devil May Cry, Final Fantasy VII, Collecting PS1 Games, Making maps for Doom
+<br>Likes: Sonic, Boomer Shooters, Resident Evil, Devil May Cry, Final Fantasy VII, Collecting PS1 Games, Making maps for Doom, HeXen
 <br>Sup? I'm BulletTimeTails, I'm from Portugal, I used to be a Google+ user from 2014 until it shut down in 2019, I joined Twitter in 2018 to migrate there and in 2019 I met Tobi on Twitter. Since I was a kid around 5 years old, I've been more of a fan of the PS1, my favorite games in that system are Final Fantasy VII (Which I played when I was 6 years old), Metal Gear Solid (Which I played when I was 10 then later revisited it when I was 17 in this year) and Resident Evil 2 (When I was around 11). I played Doom for the first time on the PlayStation version as well, the PS1 version of Doom left a big impact in me in fact to a point I became obsessed around 2013 when I discovered the beauty of ZDoom and GZDoom and the mods around it with a Total Conversion Wolfenstein 3D Mod for Doom. I wouldn't get into modding Doom seriously until 2019 with my project "Doom Hell Unleashed." My first exposure to Sonic was Tails Adventure and Sonic The Fighters from the Sonic Gems Collection for the PlayStation 2, I loved Tails when I was a kid which is basically why Tails nowadays is my persona online.</br></br></br></p>
 
 <!-- TEMPLATE
