Quick japan credits update

--- a/japan.html
+++ b/japan.html
@@ -13,4 +13,8 @@
 <a href="japan/sonicadv_int" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv_int.png" width="320" height="200" alt="Sonic Adventure International"></a>
 <a href="japan/sonicadv2" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv2.png" width="320" height="200" alt="Sonic Adventure 2"></a>
 <a href="japan/advance" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/advance.png" width="320" height="200" alt="Sonic Advance"></a>-->
+<h2 align="center">Credits</h2>
+<p align="center">Translation: KrazeeTobi
+<br>Text Revision: KrazeeTobi
+<br>Other shit: Other people, if they get involved</br></br></p>
 </html>
